[package]
name = "mapgen-web-demo"
version = "0.1.0"
edition = "2021"
description = "Web demo for mapgen procedural world generator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/san-smith/mapgen-web-demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Собираем mapgen БЕЗ параллелизма (rayon несовместим с WASM)
mapgen = { git="https://github.com/san-smith/mapgen", rev="092fd3a", default-features = false, features = ["wasm"] }

# Обязательно для WASM: getrandom требует фичи "js"
getrandom = { version = "0.2", features = ["js"] }

# WASM-биндинги
wasm-bindgen = "0.2.88"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.111"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlElement",
  "Event",
  "MouseEvent",
  "WheelEvent",
  "Element",
]